Update Our People page
Include Peter Washington, Nick Haber and Maude David to Collaborators

--- a/people/collaborators/index.html
+++ b/people/collaborators/index.html
@@ -69,3 +69,45 @@ type: group
         </p>
     </div>
 </div>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/peter3.jpg" />
+    </div>
+    <div class="three-quarters">
+        <h3>Peter Washington</h3>
+        <h4>Assistant Professor</h4>
+        <p>
+          Peter Washington’ s research interests include developing data science methods to support machine learning for health and wellbeing, crowdsourcing for precision health, and precise digital interventions, and applying these methods to a variety of healthcare problems.
+        </p>
+    </div>
+</div>
+<hr>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/nick.png" />
+    </div>
+    <div class="three-quarters">
+        <h3>Nick Haber</h3>
+        <h4>Associate Professor</h4>
+        <p>
+          Nick Haber co-founded the Autism Glass Project at Stanford, a research effort that employs wearable technology and computer vision in a tool for children with autism. Aside from such work on learning and therapeutic tools, he and his research group develop artificial intelligence systems meant to mimic and model the ways people learn early in life, exploring their environments through play, social interaction, and curiosity.
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/maude.png" />
+    </div>
+    <div class="three-quarters">
+        <h3>Maude David</h3>
+        <h4>Associate Professor</h4>
+        <p>
+          Maude joined the lab in January 2014 and namely studies the gut microbiome of children with ASD (Autism Spectrum Disorder) utilizing a large scale, crowd sourced clinical study approach. Her expertise are in microbiology, bioinformatics and genomics, using and integrating metagenomics, metatranscriptomics and metaproteomics to understand microbial community functions.
+		  She received her PhD in February 2010 from the Ecole Centrale de Lyon, University of Lyon, France, with Prof. T.M. Vogel, on the origin of the dehalogenases and bioremediation of chlorinated solvent.  Her grad-school work focused on the bacterial adaptation to chlorinated compounds at the genome (evolution mechanisms) and community (bioremediation) level. After graduation, she became a post-doctoral fellow at Lawrence Berkeley National Laboratory with Prof. Janet Jansson. Her work looked at the impact of climate change on soil microbial ecology and specifically at how altered precipitation affect carbon cycle using meta-“omics” analysis of microbial carbon cycling responses.
+        </p>
+    </div>
+</div>
+<hr>
