Update Our People page

--- a/people/interns/index.html
+++ b/people/interns/index.html
@@ -16,9 +16,9 @@ extra_css: /assets/css/bioindex.css
     {% endunless %}
   {% endif %}
 {% endfor %}
-{% for person in people %}
+<!-- {% for person in people %}  
   {% if person.first_name == "Shiv" %}
     {% include bio_div_alt.html %}
   {% endif %}
-{% endfor %}
+{% endfor %} -->
 
