Update Our People page

--- a/people/collaborators/index.html
+++ b/people/collaborators/index.html
@@ -8,7 +8,7 @@ type: group
 <div class="row">
   <div class="row">
     <h1>
-      Our People<small><a href="{{ site.url }}/people/">Current</a> | <a href="{{ site.url }}/people/collaborators/">Collaborators</a> | <a href="{{ site.url }}/people/interns/">Interns</a> | <a href="{{ site.url }}/people/alumni/">Alumni</a></small>
+      Our People<small><a href="{{ site.url }}/people/">Current</a> | <a href="{{ site.url }}/people/collaborators/">Collaborators</a> | <!--<a href="{{ site.url }}/people/interns/">Interns</a> | --><a href="{{ site.url }}/people/alumni/">Alumni</a></small>
     </h1>
     <hr />
   </div>
