--- a/people/collaborators/index.html
+++ b/people/collaborators/index.html
@@ -112,3 +112,48 @@ type: group
         </p>
     </div>
 </div>
+<hr>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/leticia.png" />
+    </div>
+    <div class="three-quarters">
+        <h3>Leticia Diaz Beltrán</h3>
+        <h4>Research Scholar</h4>
+        <p>
+          Leticia is conducting an integrated systems biology analysis of all published autism spectrum disorders gene expression to test whether a common signature exists between blood and brain. She also performs cross-disease analysis of autism and other related disorders, as this approach may unravel the evidence of molecular overlap among these conditions and suggest common molecular mechanisms that could provide relevant insights into the etiology and pathology of autism.
+		  In her spare time, Leticia enjoys hanging out with friends in the search for great “tapas”, watching old movies, going to the beach, hiking and travelling.
+        </p>
+    </div>
+</div>
+<hr>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/bongjunk.jpg" />
+    </div>
+    <div class="three-quarters">
+        <h3>Bongjun Ko</h3>
+        <h4>AI Engineering Fellow</h4>
+        <p>
+          Bongjun Ko is an AI Engineering Fellow at the Stanford Institute for Human-centered Artificial Intelligence (HAI) working to develop and apply artificial intelligence technologies for high-stake situations involving humans. In the Wall Lab, he is currently participating in a project developing machine-learning methods for helping children with autism through computer vision. Before joining Stanford HAI in September 2019, he worked as a Research Staff Member and Research Manager at the IBM T. J. Watson Research Center since 2006, from which he is currently on a leave-of-absence. In IBM Research, he led the research effort to develop AI technologies for Internet of Things (IoT) systems and applications and also worked on various research projects related to distributed systems, micro cloud, edge computing, and network analytics and management. He was an IBM Master Inventor (2013-2019), holding 40+ US patents, and served in invention development advisory/review board in IBM. Prior to joining IBM Research, he worked as a Senior Member of Research Staff in Philips Research North America, and as a research engineer in LG Electronics, Korea. In 1999, he co-founded a start-up, NeoMTel, Inc., in which he developed a new mobile animation codec that was shipped in more than 100 million mobile phones worldwide at the time. He received his Ph.D. in Electrical Engineering from Columbia University in 2006, and B.S. and M.S. degrees from Seoul National University in South Korea.
+        </p>
+    </div>
+</div>
+<hr>
+
+<div class="row">
+    <div class="quarter">
+        <img src="{{ site.url }}/assets/images/bios/mayam.jpg" />
+    </div>
+    <div class="three-quarters">
+        <h3>Maya McNealis</h3>
+        <h4>Clinical Research Coordinator Associate</h4>
+        <p>
+          Maya joined the Wall Lab in October 2021. She graduated with honors from UCLA with a B.S. in Neuroscience, where she researched the neuromodulation of memory and emotion circuits with transcranial focused ultrasound. Maya previously worked as an Executive Functioning Instructor for neurodiverse children and adolescents. She is passionate about advancing children’s mental healthcare, and ultimately plans to pursue a PhD in Clinical Psychology.
+        </p>
+    </div>
+</div>
+<hr>
+
