--- a/people/collaborators/index.html
+++ b/people/collaborators/index.html
@@ -159,7 +159,7 @@ type: group
 
 <div class="row">
     <div class="quarter">
-        <img src="{{ site.url }}/assets/images/bios/sorens.jpg" />
+        <img src="{{ site.url }}/assets/images/bios/sorens.png" />
     </div>
     <div class="three-quarters">
         <h3>Soren Sutaria</h3>
@@ -177,7 +177,7 @@ type: group
 
 <div class="row">
     <div class="quarter">
-        <img src="{{ site.url }}/assets/images/bios/kevint.jpg" />
+        <img src="{{ site.url }}/assets/images/bios/kevint.png" />
     </div>
     <div class="three-quarters">
         <h3>Kevin Tabatabaei</h3>
@@ -245,3 +245,4 @@ type: group
         </p>
     </div>
 </div>
+<hr>
