--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ published: true
 	<div class="featured mid-pane">
 		<div class="row">
 			<h1>About</h1>
-			<p class="landing-project-description">The Wall Lab develops methods in biomedical informatics to disentangle complex conditions that originate in childhood and perpetuate through the life course, including autism and related developmental delays. As healthcare has shifted increasingly to the use of digital technologies for data capture and finer resolutions of genomic scale, the lab has innovated, adapted and deployed biomedical data science strategies to enable precise and personalized interpretation of high resolution molecular and phenotypic data. In addition, the group has pioneered the use of machine learning and artificial intelligence for fast, quantitative and mobile detection of neurodevelopmental disorders in children, as well as the use of machine learning systems on wearable devices, such as Google Glass, for real-time "exclinical" therapy. These precision health approaches enable quantitative tracking of progress during treatment throughout an individual's life while building data of a type and scale never before possible...</p>
+			<p class="landing-project-description">The Wall Lab develops methods in biomedical informatics to disentangle complex conditions that originate in childhood and perpetuate through the life course, including autism and related developmental delays. As healthcare has shifted increasingly to the use of digital technologies for data capture and finer resolutions of genomic scale, the lab has innovated, adapted, and deployed biomedical data science strategies to enable precise and personalized interpretation of high resolution molecular and phenotypic data. In addition, the group has pioneered the use of machine learning and artificial intelligence for fast, quantitative, and mobile detection of neurodevelopmental disorders in children, as well as the use of machine learning systems on wearable devices, such as Google Glass, for real-time "exclinical" therapy. These precision health approaches enable quantitative tracking of progress during treatment throughout an individual's life while building data of a type and scale never before possible.</p>
 		</div>
 	</div>
 </div>
@@ -176,13 +176,10 @@ published: true
 
     </div> -->
 
-    <div class="main">
-
-
+    <!--<div class="main">
 
         <div class="row">
 
-			<!--
             <div class="half">
 
                 <h4 id="latest-photos" class="hide-on-mobile">Photos</h4>
@@ -230,16 +227,15 @@ published: true
 
 
             </div>
-			-->
 
-            <!--<div class="half">-->
+            <! --<div class="half">-- >
 
 			<h4 id="latest-blogs">Latest News
 				<small><a class="green" href="{{ site.url }}/news/">See All</a>
 				</small>
 			</h4>
 
-			<!-- slideshow blog list for tablet/desktop -->
+			<! -- slideshow blog list for tablet/desktop -- >
 			<div class="posts hide-on-mobile flexslider">
 				<ul class="slides">
 					{% for post in site.posts limit:4 %}
@@ -256,7 +252,7 @@ published: true
 			</div>
 
 
-			<!--  blog list for mobile only -->
+			<! --  blog list for mobile only -- >
 			<div class="posts hide-on-desktop hide-on-tablet">
 				<ul id="blog-roll">
 					{% for post in site.posts limit:4 %}
@@ -265,21 +261,17 @@ published: true
 							<span>{{ post.date | date_to_string }}</span>
 						</p>
 						<!--	{{ post.excerpt }} -->
-						<!--	<a href="{{ post.url }}">Continue Reading &raquo;</a>-->
+						<!--	<a href="{{ post.url }}">Continue Reading &raquo;</a>-- >
 					</li>
 					{% endfor %}
 				</ul>
 			</div>
-            <!--</div>-->
-
-
-
-
+            <!--</div>-- >
 
         </div>
 
         <br style="clear:both" />
 
-    </div>
+    </div> -->
     <!--end .main-->
     <br style="clear:both" />
